<resources>
    <string name="app_name">Wake Parks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome_page">welcome_page</string>
    <string name="wake_parks_image">Wake Parks image</string>
    <string name="button_leading_to_login_page">Button leading to login page</string>
    <string name="login">Login</string>
    <string name="not_now">Not Now</string>
    <string name="button_leading_to_find_a_park_page">Button leading to Find a Park page</string>
    <string name="cable_park_picture">Cable Park picture</string>
    <string name="park_info">park info</string>
    <string name="find_park_activity">find park</string>
    <string name="list_park_activity">list park</string>
    <string name="search_parks_activity">search parks</string>
    <string name="route_me">Route Me</string>
    <string name="leads_to_map_activity">leads to map activity</string>
    <string name="title_activity_park_map">Map</string>
    <string name="map_park_activity">map park</string>
    <string name="ratings">Ratings</string>
    <string name="ratings_button">ratings button</string>
    <string name="edit_information">Edit Information</string>
    <string name="user_photos">User Photos</string>
    <string name="user_photos_button">User Photos Button</string>
    <string name="edit_information_button">Edit Information Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user">Register New User</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="park_name">Park Name</string>
    <string name="add_review">Add Review</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_button">favorite button</string>
</resources>
