<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kissesfrme_20.wakeparks.welcome_page"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/wake_parks"
        android:contentDescription="@string/wake_parks_image" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:contentDescription="@string/button_leading_to_login_page"
        style="@style/AppTheme"
        android:clickable="true"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="84dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_now"
        android:id="@+id/button2"
        android:layout_marginTop="67dp"
        android:contentDescription="@string/button_leading_to_find_a_park_page"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:onClick="notNow"/>

    <TextSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSwitcher"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="318dp"
        android:layout_marginStart="318dp" />
</RelativeLayout>
