<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login_page">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_marginTop="148dp"
            android:clickable="false"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/password"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button8"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:id="@+id/button9"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:textColor="#ffffff" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged_in"
            android:id="@+id/checkBox"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</RelativeLayout>
